# NRL-ESP32

./: .gitignore  CMakeLists.txt  LICENSE  README.en.html  README.en.md  README.html  README.md  README1.md  grep.exe.stackdump  part-bh4tdv.csv  part-bi4umd.csv  part-gezipai.csv  part-s31.csv  part.csv  platformio.ini  sdkconfig.bh4tdv  sdkconfig.bh4tdv.defaults  sdkconfig.bi4umd.defaults  sdkconfig.bootloader.defaults  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esp32s31  sdkconfig.gezipai  sdkconfig.gezipai.defaults  sdkconfig.s31_function_coreboard.defaults  sdkconfig.s31_korvo  sdkconfig.s31_korvo.defaults  web-flasher.tgz
.github/workflows/: firmware.yml
boards/: nrl_bh4tdv_esp32s3.json  nrl_esp32_s31_korvo_1.json  nrl_gezipai_esp32s3_n16r8.json
cmake/: libsmb2_preinclude.h
components/fatfs/: Kconfig
components/fatfs/src/: ffconf.h
components/mdc1200/: CMakeLists.txt
docs/: architecture.html  architecture.md  esp-idf-aec-migration.md  testing.md
ota-server/: .gitignore  Caddyfile.example  Dockerfile  README.md  README.zh-CN.html  README.zh-CN.md  deploy.ps1  deploy.sh  go.mod  main.go  main_test.go  nginx.conf.example
ota-server/frontend/: Dockerfile  deploy.ps1  deploy.sh  index.html  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
ota-server/frontend/public/esp-web-tools/: esp32s3-vxLttl29.js  index-Dt9w-IG1.js  install-button.js
ota-server/frontend/src/: main.js  style.css
scripts/: build.py  ensure_idf_component.py  fetch_lvgl.py  fix_s31_toolchain.py  fix_size_per_env.py  gen_cjk_font.py  gen_gbk_table.py  generate_wifi_portal_html.py  publish_ota.py  publish_ota_mcp.py  publish_package.py  render_readme_html.py  setup_s31_env.py  stage_web_flasher.py  upload_app0.py
src/: CMakeLists.txt  idf_component.yml
src/app/: audio.h  main.cpp  main_loop_profile.h
src/app/aec/: aec_processor.cpp  aec_processor.h  esp_sr_probe.cpp
src/app/driver/: audio_passthrough.cpp  audio_passthrough.h  board_pins.h  board_pins_bh4tdv.h  board_pins_bi4umd.h  board_pins_gezipai.h  board_pins_gezipai_4g.h  board_pins_s31_function_coreboard.h  board_pins_s31_korvo.h  display.cpp  display.h  display_bi4umd.cpp  display_bi4umd.h  display_s31.cpp  eeprom.cpp  eeprom.h  es7210.cpp  es7210.h  es8311.cpp  es8311.h  es8389.cpp  es8389.h  external_radio.cpp  external_radio.h  game_tetris.cpp  game_tetris.h  gps_serial.cpp  gps_serial.h  i2c.cpp  i2c1.h  s31_i2c.cpp  s31_i2c.h  sci_serial.cpp  sci_serial.h  serial_port_config.cpp  serial_port_config.h  status_io.cpp  status_io.h  touch_bi4umd.cpp  touch_bi4umd.h
src/app/driver/fonts/: lv_font_cjk.h  lv_font_cjk_16.c
src/audio/: audio_focus.cpp  audio_focus.h  audio_router.cpp  audio_router.h  voice_resampler.cpp  voice_resampler.h
src/lib/: ble_config.cpp  ble_config.h  ctcss_decoder.cpp  ctcss_decoder.h  dtmf_codec.cpp  dtmf_codec.h  nrl_at_commands.cpp  nrl_at_commands.h  nrl_audio_bridge.cpp  nrl_audio_bridge.h  nrl_audio_config.h  nrl_bt_hfp.cpp  nrl_bt_hfp.h  nrl_captive_dns.cpp  nrl_captive_dns.h  nrl_ethernet.cpp  nrl_ethernet.h  nrl_g711.cpp  nrl_g711.h  nrl_net_compat.h  nrl_psram.h  nrl_smb_readv.cpp  nrl_usb_console.cpp  nrl_usb_console.h  nrl_version.h  nrl_wifi.cpp  nrl_wifi.h  shared_flash.h  wifi.h  wifi_config_portal.cpp  wifi_config_portal.h  wifi_config_portal.html  wifi_config_portal_page.generated.h  wifi_config_portal_sections.generated.h  wifi_config_portal_sections.html  wifi_config_portal_view.cpp  wifi_config_portal_view.h  wifi_portal_assets.generated.h  wifi_update_portal.html  wifi_update_portal_page.generated.h
src/lib/aprs/: aprs_ax25.cpp  aprs_ax25.h  aprs_crc_ccit.c  aprs_crc_ccit.h  aprs_modem.cpp  aprs_modem.h  parse_aprs.cpp  parse_aprs.h  pbuf.h
src/lib/wifi_portal_parts/: wifi_config_portal.css  wifi_config_portal.js  wifi_config_portal_lang_boot.js  wifi_update_portal.css  wifi_update_portal.js
src/media/: cover_decoder.cpp  cover_decoder.h  gbk_unicode_table.generated.h  media_decoder.cpp  media_decoder.h  media_metadata.cpp  media_metadata.h  opus_voice.cpp  opus_voice.h  wav_reader.cpp  wav_reader.h
src/services/: ai_assistant.cpp  ai_assistant.h  aprs_service.cpp  aprs_service.h  cellular_rndis_service.cpp  cellular_rndis_service.h  config_notify.cpp  config_notify.h  display_notice.cpp  display_notice.h  espnow_link.cpp  espnow_link.h  lan_discovery.cpp  lan_discovery.h  music_player.cpp  music_player.h  music_playlist.cpp  music_playlist.h  nanny.cpp  nanny.h  ota_service.cpp  ota_service.h  radio_favorites.cpp  radio_favorites.h  signaling_service.cpp  signaling_service.h  smb_stream.cpp  smb_stream.h  smb_vfs.cpp  smb_vfs.h  storage_service.cpp  storage_service.h  video_call.cpp  video_call.h
web-flasher/: index.html  manifest-bh4tdv.json  manifest-gezipai.json  manifest-gezipai_aec.json  manifest.json
web-flasher/esp-web-tools/: install-button.js  install-dialog-C5LjR_e6.js
web-flasher/firmware/: index.html
